--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
+*/node_modules
+.DS_STORE
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
